Login register pages added

--- a/index.html
+++ b/index.html
@@ -184,8 +184,10 @@
         </div>
       </nav>
       <div class="hide-mobile">
-        <a class="btn primary" href="#get-started">Get Started</a>
+        <a class="btn primary" href="login.html">Login</a>
+        <a class="btn secondary" href="register.html">Register</a>
       </div>
+
     </div>
   </header>
 
